♻️ refactor (update): content

--- a/src/components/sections/Agritech.astro
+++ b/src/components/sections/Agritech.astro
@@ -5,17 +5,31 @@ import Title from "../shared/Title.astro";
 ---
 
 <section id="agritech" class="pb-20">
-    <Container>
-                <div class="text-center max-w-3xl mx-auto space-y-4">
-            <Title>
-                BAYKATBI, L'APPLICATION WEB ACCESSIBLE EN "HORS LIGNE"
-            </Title>
-            <Paragraph>
-                Digitalisation de la chaîne de valeur
-            </Paragraph>
-        </div>
-        <img class="mx-auto mt-5 rounded-2xl" alt="agritech" width="1000" height="400" src="/images/app.png" loading="lazy" decoding="async">
-        
-        </div>
-    </Container>
+  <Container>
+    <div class="text-center max-w-3xl mx-auto space-y-4">
+      <Title>
+        📱 eBaykat : Votre Allié Intelligent pour des Campagnes Agricoles
+        Réussies
+      </Title>
+      <Paragraph> Digitalisation de la chaîne de valeur </Paragraph>
+    </div>
+    <img
+      class="mx-auto mt-5 w-40 h-40"
+      alt="logo ebaykat"
+      width="200"
+      height="200"
+      src="/images/ebaykat-logo.png"
+      loading="lazy"
+      decoding="async"
+    />
+    <img
+      class="mx-auto rounded-2xl"
+      alt="agritech"
+      width="1000"
+      height="400"
+      src="/images/Mockup- ebaykat.png"
+      loading="lazy"
+      decoding="async"
+    />
+  </Container>
 </section>
