--- a/src/components/sections/CTA2.astro
+++ b/src/components/sections/CTA2.astro
@@ -21,6 +21,13 @@ import Button from "../shared/Button.astro";
           class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-green-400 opacity-40 blur-2xl left-0 bottom-0"
         ></span>
         <img
+          src={"/images/formation.jpg"}
+          alt="banner image"
+          width="2359"
+          height="2359"
+          class="w-full h-150 sm:h-96 midmd:h-100 object-cover rounded-3xl"
+        />
+        <img
           src={"/images/partenaire2.jpg"}
           alt="banner image"
           width="2359"
@@ -31,39 +38,44 @@ import Button from "../shared/Button.astro";
     </div>
 
     <div class="flex-1 flex flex-col order-1 midmd:order-2">
-      <Title>Formation "Découverte Agro" Du 17 Juin au 14 Juillet 2024</Title>
+      <Title>Nos Formations</Title>
       <Paragraph className="mt-8">
-        "Découverte Agro" propose un mois d'immersion dans l'agrobusiness, avec
-        des cours théoriques sur la planification de projets dans divers
-        sous-secteurs (production végétale, animale, aquaculture, transformation
-        agroalimentaire, commerce agricole, agritech). La formation se termine
-        par une journée pratique dans une ferme pour découvrir les réalités du
-        secteur.
+        Nos experts et consultants experts des domaines de la qualité, hygiène,
+        sécurité et environnement du domaine agroalimentaire sont à votre
+        disposition pour la formation de votre personnel aux bonnes pratiques
+        d'hygiène et de fabrication, la mise en place adapté d'outils et process
+        de management des risques dans vos activités de production (HACCP et
+        approche processus) ainsi que la mise à niveau de vos activités vis à
+        vis des normes et réglementations (accompagnement à l'obtention de
+        l'autorisation de fabrication FRA, préparation à la mise en
+        commercialisation à l'international, préparation aux audits de
+        certification).
       </Paragraph>
       <Paragraph className="mt-2">
         Rythme d'enseignement:
         <ul>
           <li>
             <Paragraph className="ml-8">
-              &checkmark; 1 séance théorique par semaines (pour les 3 premières
-              semaines)
+              &checkmark; 2 séances théoriques fondées sur le partage d'outils
+              pratiques et d'expérience de nos intervenants
             </Paragraph>
           </li>
           <li>
             <Paragraph className="ml-8">
-              &checkmark; 1 dernière séance théorique à la 4ème semaine
+              &checkmark; 2 séances pratiques effectuées dans des fermes
+              agricoles intégrées (agriculture, élevage, pisciculture)
             </Paragraph>
           </li>
           <li>
             <Paragraph className="ml-8">
-              &checkmark; 1 séance pratique à la 4ème semaine (journée
-              d'immersion dans une ferme agricole)
+              &checkmark; Découvrir les différentes étapes de la préparation des
+              zones de production à la commercialisation des produits finaux.
             </Paragraph>
           </li>
         </ul>
       </Paragraph>
       <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLScDeacBPbpRcKuCTupYtwvkJeiP2OV61baTiAEVBXy9bNXabg/viewform"
+        href="https://docs.google.com/forms/d/e/1FAIpQLScXpShDSqfxSq7d7NTEHJt0Y9y611uJEBPgrpWP0tLT02OiZQ/viewform"
         target="_blank"
       >
         <Button className="mt-4" variant={"secondary"}>
