--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,39 +3,59 @@ import Button from "../shared/Button.astro";
 import Container from "../shared/Container.astro";
 import Paragraph from "../shared/Paragraph.astro";
 import ByNumber from "./ByNumber.astro";
-
+import Image from "astro/components/Image.astro";
 ---
 
 <section id="home" class="relative pt-32 lg:pt-36">
-    <Container className={"flex flex-col lg:flex-row gap-10 lg:gap-12"}>
-        <div class="absolute w-full lg:w-1/2 inset-y-0 lg:right-0 ">
-            <span class="absolute -left-6 md:left-4 top-24 lg:top-28 w-24 h-24 rotate-90 skew-x-12 rounded-3xl bg-green-400 blur-xl opacity-60 lg:opacity-95 lg:block hidden"></span>
-            <span class="absolute right-4 bottom-12 w-24 h-24 rounded-3xl bg-primary blur-xl opacity-80"></span>
-        </div>
-        <span class="w-4/12 lg:w-2/12 aspect-square bg-gradient-to-tr from-primary to-green-400 absolute -top-5 lg:left-0 rounded-full skew-y-12 blur-2xl opacity-40 skew-x-12 rotate-90"></span>
-        <div class="relative flex flex-col items-center text-center lg:text-left lg:py-7 xl:py-8 
-        lg:items-start lg:max-w-none max-w-3xl mx-auto lg:mx-0 lg:flex-1 lg:w-1/2">
-            
-            <h1 class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
-             font-bold text-heading-1">
-             Faire de <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">l'agriculture</span> un Business rentable pour tous.
-            </h1>
-            <Paragraph className="mt-8">
-                Que vous soyez agriculteur cherchant à augmenter vos rendements, investisseur dans un projet d'agrobusiness ou organisme cherchant à soutenir le secteur agricole, <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"> Baykat & Business </span>  vous offre l'expertise pour réussir.
-            </Paragraph>
-        </div>
+  <Container className={"flex flex-col lg:flex-row gap-10 lg:gap-12"}>
+    <div class="absolute w-full lg:w-1/2 inset-y-0 lg:right-0">
+      <span
+        class="absolute -left-6 md:left-4 top-24 lg:top-28 w-24 h-24 rotate-90 skew-x-12 rounded-3xl bg-green-400 blur-xl opacity-60 lg:opacity-95 lg:block hidden"
+      ></span>
+      <span
+        class="absolute right-4 bottom-12 w-24 h-24 rounded-3xl bg-primary blur-xl opacity-80"
+      ></span>
+    </div>
+    <span
+      class="w-4/12 lg:w-2/12 aspect-square bg-gradient-to-tr from-primary to-green-400 absolute -top-5 lg:left-0 rounded-full skew-y-12 blur-2xl opacity-40 skew-x-12 rotate-90"
+    ></span>
+    <div
+      class="relative flex flex-col items-center text-center lg:text-left lg:py-7 xl:py-8
+        lg:items-start lg:max-w-none max-w-3xl mx-auto lg:mx-0 lg:flex-1 lg:w-1/2"
+    >
+      <h1
+        class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
+             font-bold text-heading-1"
+      >
+        Faire de <span
+          class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"
+          >l'agriculture</span
+        > un Business rentable pour tous.
+      </h1>
+      <Paragraph className="mt-8">
+        Que vous soyez agriculteur cherchant à augmenter vos rendements,
+        investisseur dans un projet d'agrobusiness ou organisme cherchant à
+        soutenir le secteur agricole, <span
+          class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600"
+        >
+          Baykat & Business
+        </span> vous offre l'expertise pour réussir.
+      </Paragraph>
+    </div>
 
-        <div class="flex flex-1 lg:w-1/2 lg:h-auto relative lg:max-w-none lg:mx-0 mx-auto max-w-3xl">
-            <img 
-                src="https://lh3.googleusercontent.com/pw/ABLVV87HIHIdOolK0yxjb7A8pbZMISjJ8udP610iFmlASRsgNOKgELfbU0z69lIXtnQnl3UA_BAaOjaIjB0Ww_kH37mBRhg9qiKPpmJwbd0Or95H0kuenC52=w2400" 
-                loading="eager"
-                alt="Hero image" 
-                width="2350" 
-                height="2359" 
-                class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96"
-            >
-        </div>
-    </Container>
+    <div
+      class="flex flex-1 lg:w-1/2 lg:h-auto relative lg:max-w-none lg:mx-0 mx-auto max-w-3xl"
+    >
+      <Image
+        src="images/baykatandbusiness-bg.png"
+        loading="eager"
+        alt="Hero image"
+        width="2350"
+        height="2359"
+        class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96"
+      />
+    </div>
+  </Container>
 
-    <ByNumber/>
+  <ByNumber />
 </section>
