--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -3,36 +3,49 @@ import Service from "../cards/Service.astro";
 import Container from "../shared/Container.astro";
 import Paragraph from "../shared/Paragraph.astro";
 import Title from "../shared/Title.astro";
-
+import Button from "../shared/Button.astro";
+import type { string } from "astro/zod";
 
 type ServicesProps = {
-    title: string;
-    description: string;
-    icon: string;
+  title: string;
+  description: string;
+  icon: string;
+  serviceLink?: string;
 };
 
-const {titreSection, descSection, items} = Astro.props
+const { titreSection, descSection, items, serviceLink } = Astro.props;
 ---
 
 <section id="services">
-    <Container className="space-y-10 md:sapce-y-12">
-        <div class="text-center max-w-3xl mx-auto space-y-4">
-            <Title>
-                {titreSection}
-            </Title>
-            <Paragraph>
-                {descSection}
-            </Paragraph>
-        </div>
-        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
-                {
-                    items.map((service: ServicesProps) => {
-                    return (
-                            <Service title={service.title} description={service.description} icon={service.icon}>
-                            </Service>
-                            );
-                    })
-                }
-        </div>
-    </Container>
+  <Container className="space-y-10 md:sapce-y-12">
+    <div class="text-center max-w-3xl mx-auto space-y-4">
+      <Title>
+        {titreSection}
+      </Title>
+      <Paragraph>
+        {descSection}
+      </Paragraph>
+      {serviceLink && (
+        <a href={serviceLink} target="_blank">
+          <Button className="mt-4" variant={"secondary"}>
+            <span class="text-white relative z-[5]"
+              >Parlez nous de vos projets !</span>
+          </Button>
+        </a>
+      )}
+    </div>
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-8">
+      {
+        items.map((service: ServicesProps) => {
+          return (
+            <Service
+              title={service.title}
+              description={service.description}
+              icon={service.icon}
+            />
+          );
+        })
+      }
+    </div>
+  </Container>
 </section>
