--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,10 @@ import Chatbot from "../components/shared/Chatbot.astro";
     <AboutUs />
     <Agritech />
     <Services
-      titreSection={"Dans BAYKATBI, nous avons:"}
-      descSection={""}
+      titreSection={"eBaykat"}
+      descSection={"Gérez mieux vos projets agricoles,achetez et vendez des fruits et légumes de qualité avec eBaykat"}
       items={agritech}
+      classname="grid sm:grid-cols-2 lg:grid-cols-2 gap-6 lg:gap-8"
     />
     <Contact />
     <FixedButton
