--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -6,211 +6,101 @@ import Paragraph from "../shared/Paragraph.astro";
 import { footerMenu, contact } from "../../utils/data";
 import ContactInfo from "../shared/ContactInfo.astro";
 
+
 const currentYear = new Date().getFullYear();
+
+
 ---
-
 <div class="mt-16"></div>
-<footer
-  class="relative bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900 pt-28 rounded-t-3xl"
->
-  <div class="absolute right-0 top-0 h-full w-full flex justify-end">
-    <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
-      <span
-        class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
-      ></span>
-      <span
-        class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
-      ></span>
-      <span
-        class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
-      ></span>
-    </div>
-  </div>
-
-  <div class="absolute left-0 bottom-0 h-full w-full flex items-end">
-    <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
-      <span
-        class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
-      ></span>
-      <span
-        class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
-      ></span>
-      <span
-        class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
-      ></span>
-    </div>
-  </div>
-  <Container className="pb-8 relative overflow-hidden">
-    <span
-      class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 blur-2xl opacity-20 w-24 h-16 sm:w-48 sm:h-36 rounded-full rotate-12 skew-x-6 bg-primary"
-    ></span>
-    <div
-      class="grid grid-cols-2 lg:grid-cols-2 lg:items-stretch gap-8 relative"
-    >
-      <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
-        <div class="h-full">
-          <!-- logo -->
-          <div class="min-w-max inline-flex relative">
-            <a href="/" class="relative flex items-center gap-3">
-              <div
-                class="relative z-20 flex w-full justify-between md:px-0 lg:w-max"
-              >
-                <a
-                  href="/#home"
-                  aria-label="logo"
-                  class="flex items-center space-x-2"
-                >
-                  <img
-                    src="/images/logo.png"
-                    alt="Baykat&Business"
-                    class="h-16 w-auto"
-                  />
-                </a>
-              </div>
-
-              <div
-                class="inline-flex items-center text-lg font-semibold text-heading-1"
-              >
-                <a href="/#home"> &#xA0;Baykat&Business </a>
-              </div>
-            </a>
-            <Paragraph className={"mt-8"}>
-              Faire de l'agriculture un Business rentable pour tous.
-            </Paragraph>
+<footer class="relative  bg-gradient-to-tr from-gray-100 to-gray-200 dark:from-gray-900 pt-28 rounded-t-3xl">
+    <div class="absolute right-0 top-0 h-full w-full flex justify-end">
+        <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
+            <span
+              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+            ></span>
           </div>
-
-          <!-- social links -->
-          <div class="min-h-max flex items-center gap-4 text-heading-3 mt-8">
-            <a
-              href="https://www.instagram.com/baykatbusiness/"
-              target="_blank"
-              aria-label="instagram link"
-              class="transition hover:text-heading-1 hover:scale-105"
-            >
-              <svg
-                fill="#17b04f"
-                height="30"
-                width="30"
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="-143 145 512 512"
-                xml:space="preserve"
-                stroke="#17b04f"
-                ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-                  <g>
-                    <path
-                      d="M113,446c24.8,0,45.1-20.2,45.1-45.1c0-9.8-3.2-18.9-8.5-26.3c-8.2-11.3-21.5-18.8-36.5-18.8s-28.3,7.4-36.5,18.8 c-5.3,7.4-8.5,16.5-8.5,26.3C68,425.8,88.2,446,113,446z"
-                    ></path>
-                    <polygon
-                      points="211.4,345.9 211.4,308.1 211.4,302.5 205.8,302.5 168,302.6 168.2,346 "
-                    ></polygon>
-                    <path
-                      d="M183,401c0,38.6-31.4,70-70,70c-38.6,0-70-31.4-70-70c0-9.3,1.9-18.2,5.2-26.3H10v104.8C10,493,21,504,34.5,504h157 c13.5,0,24.5-11,24.5-24.5V374.7h-38.2C181.2,382.8,183,391.7,183,401z"
-                    ></path>
-                    <path
-                      d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M241,374.7v104.8 c0,27.3-22.2,49.5-49.5,49.5h-157C7.2,529-15,506.8-15,479.5V374.7v-52.3c0-27.3,22.2-49.5,49.5-49.5h157 c27.3,0,49.5,22.2,49.5,49.5V374.7z"
-                    ></path>
-                  </g>
-                </g></svg
-              >
-
-              <span class="sr-only">social link</span>
-            </a>
-
-            <a
-              href="https://twitter.com/baykatbusiness"
-              aria-label="Twitter link"
-              target="_blank"
-              class="transition hover:text-heading-1 hover:scale-105"
-            >
-              <svg
-                height="30"
-                width="30"
-                version="1.1"
-                id="_x32_"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 512 512"
-                xml:space="preserve"
-                fill="#17b04f"
-                stroke="#17b04f"
-                ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-                  <style type="text/css">
-                    .st0 {
-                      fill: #17b04f;
-                    }
-                  </style>
-                  <g>
-                    <path
-                      class="st0"
-                      d="M256,0C114.615,0,0,114.615,0,256s114.615,256,256,256s256-114.615,256-256S397.385,0,256,0z M260.926,217.391 c0.084,0.004,0.164,0.021,0.25,0.025c-0.875-3.752-1.328-7.664-1.328-11.682c0-28.307,22.951-51.258,51.262-51.258 c14.742,0,28.063,6.225,37.414,16.188c9.6-1.89,18.684-5.174,27.129-9.523c1.781-0.864,3.566-1.723,5.32-2.674 c-3.039,9.334-8.744,17.412-16.141,23.532c-2.004,1.576-4.062,3.098-6.326,4.344c0.154-0.018,0.304-0.052,0.457-0.071 c-0.15,0.093-0.275,0.22-0.428,0.312c8.402-1.005,16.459-3.051,24.111-5.942c1.715-0.592,3.428-1.191,5.127-1.852 c-6.842,10.159-15.453,19.095-25.375,26.259c0.098,2.197,0.148,4.406,0.148,6.631c0,67.736-51.558,145.842-145.844,145.842 c-28.947,0-55.891-8.484-78.576-23.028c4.01,0.473,8.092,0.715,12.229,0.715c19.136,0,37.014-5.269,52.383-14.34 c3.871-2.23,7.658-4.639,11.273-7.365c-0.098-0.002-0.187-0.026-0.285-0.028c0.094-0.073,0.196-0.136,0.289-0.209 c-19.422-0.358-36.184-11.539-44.574-27.747c-1.25-2.489-2.32-5.096-3.164-7.831c3.086,0.58,6.246,0.898,9.5,0.898 c3.391,0,6.666-0.436,9.871-1.063c1.197-0.168,2.406-0.308,3.586-0.502c-0.156-0.032-0.293-0.1-0.449-0.133 c0.162-0.042,0.336-0.056,0.496-0.1c-23.449-4.709-41.119-25.428-41.119-50.262c0-0.196,0.002-0.387,0.004-0.58l0.024-0.055 c5.521,3.064,11.693,5.092,18.23,5.94c1.609,0.269,3.221,0.516,4.832,0.657c-0.11-0.074-0.205-0.164-0.314-0.238 c0.152,0.006,0.297,0.036,0.447,0.041c-13.754-9.191-22.803-24.883-22.803-42.666c0-8.142,1.988-15.787,5.367-22.623 c0.539-1.028,1.018-2.078,1.637-3.074c22.711,27.822,55.516,46.971,92.801,52.15c4.16,0.605,8.332,1.144,12.553,1.388 C260.934,217.443,260.932,217.416,260.926,217.391z"
-                    ></path>
-                  </g>
-                </g></svg
-              >
-            </a>
-
-            <a
-              href="#"
-              aria-label="facebook link"
-              class="transition hover:text-heading-1 hover:scale-105"
-            >
-              <svg
-                fill="#17b04f"
-                height="30"
-                width="30"
-                version="1.1"
-                id="Layer_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="-143 145 512 512"
-                xml:space="preserve"
-                stroke="#17b04f"
-                ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M169.5,357.6l-2.9,38.3h-39.3 v133H77.7v-133H51.2v-38.3h26.5v-25.7c0-11.3,0.3-28.8,8.5-39.7c8.7-11.5,20.6-19.3,41.1-19.3c33.4,0,47.4,4.8,47.4,4.8l-6.6,39.2 c0,0-11-3.2-21.3-3.2c-10.3,0-19.5,3.7-19.5,14v29.9H169.5z"
-                  ></path>
-                </g></svg
-              >
-              <span class="sr-only">social link</span>
-            </a>
-          </div>
-        </div>
-
-        <GroupFooterNav>
-          <!-- menu -->
-          <FooterNav title={"Menu"} navItems={footerMenu} />
-
-          <!-- contact -->
-          <ContactInfo title={"Nous Contacter"} items={contact} />
-        </GroupFooterNav>
       </div>
-    </div>
-    <div class="bg-gradient-to-tl from-box-bg py-2 relative">
-      <Container>
-        <div
-          class="flex justify-between items-center gap-6 md:text-lg text-heading-3"
-        >
-          <div>
-            &copy; {currentYear}
-            <span id="year"></span>
-            <a target="_blank" href="https://mbayedione.netlify.app/">
-              #NioulBoy. All right reserved</a
-            >
+
+      <div class="absolute left-0 bottom-0 h-full w-full flex items-end">
+        <div class="w-28 h-28 overflow-hidden flex rounded-xl relative blur-2xl">
+            <span
+              class="absolute w-16 h-16 -top-1 -right-1 bg-green-500 rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"
+            ></span>
+            <span
+              class="absolute w-16 h-16 -bottom-1 -left-1 bg-primary rounded-md rotate-45"
+            ></span>
           </div>
+      </div>
+    <Container className="pb-8 relative overflow-hidden">
+        
+        <span class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 blur-2xl opacity-20 w-24 h-16 sm:w-48 sm:h-36 rounded-full rotate-12 skew-x-6 bg-primary"></span>
+        <div class="grid grid-cols-2 lg:grid-cols-2 lg:items-stretch gap-8 relative">
+            <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
+                <div class="h-full">
+                    <!-- logo -->
+                    <div class="min-w-max inline-flex relative">
+                        <a href="/" class="relative flex items-center gap-3">
+                            <div class="relative z-20 flex w-full justify-between md:px-0 lg:w-max">
+                            <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
+                                <img src="/images/logo.png" alt="Baykat&Business" class="h-16 w-auto" />
+                            </a>
+                    </div>
+                        
+                    <div class="inline-flex items-center text-lg font-semibold text-heading-1">
+                            <a href="/#home"> &#xA0;Baykat&Business </a>
+                    </div>
+                </div>
+                    <Paragraph className={"mt-8"}>
+                        Faire de l'agriculture un Business rentable pour tous.
+                    </Paragraph>
+                </div>
+
+                <!-- social links -->
+                <div class="min-h-max flex items-center gap-4 text-heading-3 mt-8">
+                    <a href="https://www.instagram.com/baykatbusiness/" target="_blank" aria-label="instagram link" class="transition hover:text-heading-1 hover:scale-105">
+                       <svg fill="#17b04f" height="30" width="30" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-143 145 512 512" xml:space="preserve" stroke="#17b04f"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M113,446c24.8,0,45.1-20.2,45.1-45.1c0-9.8-3.2-18.9-8.5-26.3c-8.2-11.3-21.5-18.8-36.5-18.8s-28.3,7.4-36.5,18.8 c-5.3,7.4-8.5,16.5-8.5,26.3C68,425.8,88.2,446,113,446z"></path> <polygon points="211.4,345.9 211.4,308.1 211.4,302.5 205.8,302.5 168,302.6 168.2,346 "></polygon> <path d="M183,401c0,38.6-31.4,70-70,70c-38.6,0-70-31.4-70-70c0-9.3,1.9-18.2,5.2-26.3H10v104.8C10,493,21,504,34.5,504h157 c13.5,0,24.5-11,24.5-24.5V374.7h-38.2C181.2,382.8,183,391.7,183,401z"></path> <path d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M241,374.7v104.8 c0,27.3-22.2,49.5-49.5,49.5h-157C7.2,529-15,506.8-15,479.5V374.7v-52.3c0-27.3,22.2-49.5,49.5-49.5h157 c27.3,0,49.5,22.2,49.5,49.5V374.7z"></path> </g> </g></svg>
+
+                        <span class="sr-only">social link</span>
+                    </a>
+
+                    <a href="https://twitter.com/baykatbusiness" aria-label="Twitter link" target="_blank" class="transition hover:text-heading-1 hover:scale-105">
+                        <svg height="30" width="30" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" fill="#17b04f" stroke="#17b04f"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .st0{fill:#17b04f;} </style> <g> <path class="st0" d="M256,0C114.615,0,0,114.615,0,256s114.615,256,256,256s256-114.615,256-256S397.385,0,256,0z M260.926,217.391 c0.084,0.004,0.164,0.021,0.25,0.025c-0.875-3.752-1.328-7.664-1.328-11.682c0-28.307,22.951-51.258,51.262-51.258 c14.742,0,28.063,6.225,37.414,16.188c9.6-1.89,18.684-5.174,27.129-9.523c1.781-0.864,3.566-1.723,5.32-2.674 c-3.039,9.334-8.744,17.412-16.141,23.532c-2.004,1.576-4.062,3.098-6.326,4.344c0.154-0.018,0.304-0.052,0.457-0.071 c-0.15,0.093-0.275,0.22-0.428,0.312c8.402-1.005,16.459-3.051,24.111-5.942c1.715-0.592,3.428-1.191,5.127-1.852 c-6.842,10.159-15.453,19.095-25.375,26.259c0.098,2.197,0.148,4.406,0.148,6.631c0,67.736-51.558,145.842-145.844,145.842 c-28.947,0-55.891-8.484-78.576-23.028c4.01,0.473,8.092,0.715,12.229,0.715c19.136,0,37.014-5.269,52.383-14.34 c3.871-2.23,7.658-4.639,11.273-7.365c-0.098-0.002-0.187-0.026-0.285-0.028c0.094-0.073,0.196-0.136,0.289-0.209 c-19.422-0.358-36.184-11.539-44.574-27.747c-1.25-2.489-2.32-5.096-3.164-7.831c3.086,0.58,6.246,0.898,9.5,0.898 c3.391,0,6.666-0.436,9.871-1.063c1.197-0.168,2.406-0.308,3.586-0.502c-0.156-0.032-0.293-0.1-0.449-0.133 c0.162-0.042,0.336-0.056,0.496-0.1c-23.449-4.709-41.119-25.428-41.119-50.262c0-0.196,0.002-0.387,0.004-0.58l0.024-0.055 c5.521,3.064,11.693,5.092,18.23,5.94c1.609,0.269,3.221,0.516,4.832,0.657c-0.11-0.074-0.205-0.164-0.314-0.238 c0.152,0.006,0.297,0.036,0.447,0.041c-13.754-9.191-22.803-24.883-22.803-42.666c0-8.142,1.988-15.787,5.367-22.623 c0.539-1.028,1.018-2.078,1.637-3.074c22.711,27.822,55.516,46.971,92.801,52.15c4.16,0.605,8.332,1.144,12.553,1.388 C260.934,217.443,260.932,217.416,260.926,217.391z"></path> </g> </g></svg>
+                    </a>
+
+                    <a href="https://www.facebook.com/baykatbusiness/" aria-label="facebook link" class="transition hover:text-heading-1 hover:scale-105">
+                        <svg fill="#17b04f" height="30" width="30" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-143 145 512 512" xml:space="preserve" stroke="#17b04f"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M113,145c-141.4,0-256,114.6-256,256s114.6,256,256,256s256-114.6,256-256S254.4,145,113,145z M169.5,357.6l-2.9,38.3h-39.3 v133H77.7v-133H51.2v-38.3h26.5v-25.7c0-11.3,0.3-28.8,8.5-39.7c8.7-11.5,20.6-19.3,41.1-19.3c33.4,0,47.4,4.8,47.4,4.8l-6.6,39.2 c0,0-11-3.2-21.3-3.2c-10.3,0-19.5,3.7-19.5,14v29.9H169.5z"></path> </g></svg>
+                        <span class="sr-only">social link</span>
+                    </a>
+                </div>
+            </div>
+
+            <GroupFooterNav>
+                <!-- menu -->
+                <FooterNav title={"Menu"} navItems={footerMenu}/>
+
+                <!-- contact -->
+                <ContactInfo title={"Nous Contacter"} items={contact}/>
+                
+            </GroupFooterNav>
         </div>
-      </Container>
+
+    </Container>
+    <div class=" bg-gradient-to-tl from-box-bg py-2 relative">
+        <Container>
+            <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
+                <div>
+                    &copy; {currentYear} <span id="year"></span> <a target="_blank" href="https://mbayedione.netlify.app/"> #NioulBoy. All right reserved</a>
+                </div>
+            </div>
+        </Container>
     </div>
-  </Container>
 </footer>
