--- a/src/components/shared/Chatbot.astro
+++ b/src/components/shared/Chatbot.astro
@@ -1,32 +1,32 @@
 ---
-import Button from "./Button.astro"
+import Button from "./Button.astro";
 ---
 
 <div
-    id="chatbot-iframe-container"
-    style="display: none; position: fixed; bottom: 80px; right: 20px; width: 300px; height: 400px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"
+  id="chatbot-iframe-container"
+  style="display: none; position: fixed; bottom: 80px; right: 20px; width: 300px; height: 400px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"
 >
-    <iframe
-        src="https://chat.ebaykat.com/chatbot-iframe/U0TOAWBcOEShY15f4nXsL"
-        width="100%"
-        height="100%"
-        frameborder="0"></iframe>
-    <button
-        id="close-chatbot"
-        style="position: absolute; top: 10px; right: 10px; background-color: #fff; border: none; cursor: pointer; padding: 5px; border-radius: 50%; box-shadow: 0 2px 4px rgba(210, 73, 73, 0.678);"
-        onclick="document.getElementById('chatbot-iframe-container').style.display = 'none'"
-        >X</button
-    >
+  <iframe
+    src="https://chat.ebaykat.com/chatbot-iframe/U0TOAWBcOEShY15f4nXsL"
+    width="100%"
+    height="100%"
+    frameborder="0"></iframe>
+  <button
+    id="close-chatbot"
+    style="position: absolute; top: 10px; right: 10px; background-color: #fff; border: none; cursor: pointer; padding: 5px; border-radius: 50%; box-shadow: 0 2px 4px rgba(210, 73, 73, 0.678);"
+    onclick="document.getElementById('chatbot-iframe-container').style.display = 'none'"
+    >X</button
+  >
 </div>
 <button
-    id="chatbot-button"
-    style="position: fixed; bottom: 20px; right: 20px; background-color: #fff; border: none; cursor: pointer; display: flex; align-items: center; padding: 10px; border-radius: 50px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); width: 300px;"
-    onclick="document.getElementById('chatbot-iframe-container').style.display = 'block'"
+  id="chatbot-button"
+  style="position: fixed; bottom: 20px; right: 20px; background-color: #fff; border: none; cursor: pointer; display: flex; align-items: center; padding: 10px;  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); width: 300px;"
+  onclick="document.getElementById('chatbot-iframe-container').style.display = 'block'"
 >
-    <img
-        src="https://backend.chatbase.co/storage/v1/object/public/chatbots-profile-pictures/abb961ed-30eb-4538-947e-1d28f8cb272d/pm2H0jTZo226K2W0fRJ2-.jpg?width=40&height=40&quality=50"
-        alt="Chatbot"
-        style="width: 50px; height: 40px; border-radius: 50%;"
-    />
-    <span style="margin-left: 10px;">Discuter avec l'eBaykat</span>
+  <img
+    src="images/Avatar_Baykat_.png"
+    alt="Chatbot"
+    style="width: 50px; height: 40px; border-radius: 50%;"
+  />
+  <span style="margin-left: 10px;">Discuter avec l'eBaykat</span>
 </button>
