✨ feat (blog): add blog structure, posts, and components

--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -5,19 +5,23 @@ import  Navitem from "../shared/Navitem.astro";
 
 const navItems = [
     {
-        href:"#",
+        href:"/",
         text:"Accueil"
     },
     {
-        href:"#services",
+        href:"/#services",
         text:"Services"
     },
     {
-        href:"#a-propos",
+        href:"/blog",
+        text:"Blog"
+    },
+    {
+        href:"/#a-propos",
         text:"A Propos"
     },
     {
-        href:"#contact",
+        href:"/#contact",
         text:"Contact"
     },
 ]
