--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,23 +40,13 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <!-- Netlify Identity Widget -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script is:inline defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <slot name="head" />
   </head>
   <body class="overflow-hidden overflow-y-auto bg-body">
     <Navbar />
     <slot />
     <Footer />
-    <script async src={gaSrc}></script>
-    <script async>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        window.dataLayer.push(arguments);
-      }
-
-      gtag("js", new Date());
-      gtag("config", TRACKING_ID);
-    </script>
   </body>
   <script>
     const switchTheme = document.querySelector(
